--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -18,9 +18,9 @@ const posts = (await getCollection('blog')).sort(
           Latest rumblings around tech
         </p>
       </div>
-      <div class="mx-auto mt-16 grid max-w-2xl auto-rows-fr grid-cols-1 gap-8 sm:mt-20 lg:mx-0 lg:max-w-none lg:grid-cols-3">
+      <div class="mx-auto mt-10 grid max-w-2xl auto-rows-fr grid-cols-1 gap-8 sm:mt-14 lg:mx-0 lg:max-w-none lg:grid-cols-3">
 		{posts.map(post =>
-<article class="relative w-[400px] isolate flex flex-col justify-end overflow-hidden rounded-2xl bg-gray-900 px-8 pb-8 pt-80 sm:pt-48 lg:pt-80 ml-6 mb-10"
+<article class="relative isolate flex flex-col justify-end overflow-hidden rounded-2xl bg-gray-900 px-8 pb-8 pt-80 sm:pt-48 lg:pt-80 ml-6 mb-10"
             >
               <img src={post.data.banner} alt="" class="absolute inset-0 -z-10 h-full w-full object-cover" />
               <div class="absolute inset-0 -z-10 bg-gradient-to-t from-gray-900 via-gray-900/40" />
