--- a/src/components/Layout.astro
+++ b/src/components/Layout.astro
@@ -1,125 +1,190 @@
 ---
-import HeaderLink from '../components/HeaderLink.astro';
-import BaseHead from './BaseHead.astro';
+import HeaderLink from "../components/HeaderLink.astro";
+import BaseHead from "./BaseHead.astro";
 ---
+
 <style>
-.waves { background: url(/img/bg.svg) no-repeat; }
+  .waves {
+    background: url(/img/bg.svg) no-repeat;
+  }
 </style>
 <html>
-    <head>
-        <BaseHead description="Software development" title="Vectos"/>
-    </head>
-    <body class="antialiased font-sans">
-
-        <!-- This example requires Tailwind CSS v2.0+ -->
-        <nav class="bg-white shadow">
-          <div class="max-w-7xl mx-auto px-2 sm:px-6 lg:px-8">
-            <div class="relative flex justify-between h-16">
-              <div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
-                <!-- Mobile menu button -->
-                <button id="nav-button" type="button" class="inline-flex items-center justify-center p-2 rounded-md text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500" aria-controls="mobile-menu" aria-expanded="false">
-                  <span class="sr-only">Open main menu</span>
-                  <svg id="menu-icon-closed" class="block h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
-                  </svg>
-                  <svg id="menu-icon-open" class="hidden h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
-                  </svg>
-                </button>
-              </div>
-              <div class="flex-1 flex items-center justify-center sm:items-stretch sm:justify-start">
-                <div class="flex-shrink-0 flex items-center">
-                  <a href="/"><img class="block lg:hidden h-8 w-auto" src="/img/logo.png" alt="Vectos"></a>
-                  <a href="/"><img class="hidden lg:block h-8 mt-2 w-auto" src="/img/logo.png" alt="Vectos"></a>
-                </div>
-                <div class="hidden sm:ml-6 sm:flex sm:space-x-8">
-                    <HeaderLink href="/">Home</HeaderLink>
-                    <!-- <HeaderLink href="/blog">Projects</HeaderLink> -->
-                    <HeaderLink href="/about">About</HeaderLink>
-                    <HeaderLink href="/blog">Blog</HeaderLink>
-                </div>
-              </div>
+  <head>
+    <BaseHead description="Software development" title="Vectos" />
+  </head>
+  <body class="antialiased font-sans">
+    <!-- This example requires Tailwind CSS v2.0+ -->
+    <nav class="bg-white shadow">
+      <div class="max-w-7xl mx-auto px-2 sm:px-6 lg:px-8">
+        <div class="relative flex justify-between h-16">
+          <div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
+            <!-- Mobile menu button -->
+            <button
+              id="nav-button"
+              type="button"
+              class="inline-flex items-center justify-center p-2 rounded-md text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500"
+              aria-controls="mobile-menu"
+              aria-expanded="false"
+            >
+              <span class="sr-only">Open main menu</span>
+              <svg
+                id="menu-icon-closed"
+                class="block h-6 w-6"
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke="currentColor"
+                aria-hidden="true"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M4 6h16M4 12h16M4 18h16"></path>
+              </svg>
+              <svg
+                id="menu-icon-open"
+                class="hidden h-6 w-6"
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke="currentColor"
+                aria-hidden="true"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M6 18L18 6M6 6l12 12"></path>
+              </svg>
+            </button>
+          </div>
+          <div
+            class="flex-1 flex items-center justify-center sm:items-stretch sm:justify-start"
+          >
+            <div class="flex-shrink-0 flex items-center">
+              <a href="/"
+                ><img
+                  class="block lg:hidden h-8 w-auto"
+                  src="/img/logo.png"
+                  alt="Vectos"
+                /></a
+              >
+              <a href="/"
+                ><img
+                  class="hidden lg:block h-8 mt-2 w-auto"
+                  src="/img/logo.png"
+                  alt="Vectos"
+                /></a
+              >
+            </div>
+            <div class="hidden sm:ml-6 sm:flex sm:space-x-8">
+              <HeaderLink href="/">Home</HeaderLink>
+              <!-- <HeaderLink href="/blog">Projects</HeaderLink> -->
+              <HeaderLink href="/about">About</HeaderLink>
+              <HeaderLink href="/blog">Blog</HeaderLink>
             </div>
           </div>
-    
-          <!-- Mobile menu, show/hide based on menu state. -->
-          <div id="nav-bar" class="hidden">
-            <div class="pt-2 pb-3 space-y-1">
-                <HeaderLink href="/">Home</HeaderLink>
-                <!-- <HeaderLink href="/blog">Projects</HeaderLink> -->
-                <HeaderLink href="/about">About</HeaderLink>
-                <HeaderLink href="/blog">Blog</HeaderLink>
-            </div>
-          </div>
-        </nav>
-    
-        <div class="relative overflow-hidden waves">
-        <slot />
         </div>
-    
-      <footer class="bg-white">
-        <div class="max-w-7xl mx-auto py-12 px-4 sm:px-6 md:flex md:items-center md:justify-between lg:px-8">
-          <div class="flex justify-center space-x-6 md:order-2">
-    
-            <a target="_blank" href="https://github.com/vectos" class="text-gray-400 hover:text-gray-500">
-              <span class="sr-only">GitHub</span>
-              <svg class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
-                <path fill-rule="evenodd" d="M12 2C6.477 2 2 6.484 2 12.017c0 4.425 2.865 8.18 6.839 9.504.5.092.682-.217.682-.483 0-.237-.008-.868-.013-1.703-2.782.605-3.369-1.343-3.369-1.343-.454-1.158-1.11-1.466-1.11-1.466-.908-.62.069-.608.069-.608 1.003.07 1.531 1.032 1.531 1.032.892 1.53 2.341 1.088 2.91.832.092-.647.35-1.088.636-1.338-2.22-.253-4.555-1.113-4.555-4.951 0-1.093.39-1.988 1.029-2.688-.103-.253-.446-1.272.098-2.65 0 0 .84-.27 2.75 1.026A9.564 9.564 0 0112 6.844c.85.004 1.705.115 2.504.337 1.909-1.296 2.747-1.027 2.747-1.027.546 1.379.202 2.398.1 2.651.64.7 1.028 1.595 1.028 2.688 0 3.848-2.339 4.695-4.566 4.943.359.309.678.92.678 1.855 0 1.338-.012 2.419-.012 2.747 0 .268.18.58.688.482A10.019 10.019 0 0022 12.017C22 6.484 17.522 2 12 2z" clip-rule="evenodd" />
-              </svg>
-            </a>
-    
-            <a href="https://www.linkedin.com/in/mark-de-jong-a808b7167" class="text-gray-400 hover:text-gray-500">
-              <span class="sr-only">LinkedIn</span>
-              <svg class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
-                <path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/>
-              </svg>
-            </a>
-    
-          </div>
-          <div class="mt-8 md:mt-0 md:order-1">
-            <p class="text-center text-base text-gray-800">
-              &copy; 2023 Vectos - The vector in improving your websites & apps. Registered under KvK: 71425993
-            </p>
-          </div>
+      </div>
+
+      <!-- Mobile menu, show/hide based on menu state. -->
+      <div id="nav-bar" class="hidden">
+        <div class="pt-2 pb-3 space-y-1">
+          <HeaderLink href="/">Home</HeaderLink>
+          <!-- <HeaderLink href="/blog">Projects</HeaderLink> -->
+          <HeaderLink href="/about">About</HeaderLink>
+          <HeaderLink href="/blog">Blog</HeaderLink>
         </div>
-      </footer>
-    
-      </body>
-      
-      <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js" integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
-      <script>
-        $(document).ready(function() {
+      </div>
+    </nav>
 
-          var shown = false;
-          var navBar = $('#nav-bar');
-          var navIconClosed = $('#menu-icon-closed');
-          var navIconOpen = $('#menu-icon-open');
+    <div class="relative overflow-hidden waves">
+      <slot />
+    </div>
 
-          function hide(el) {
-            el.addClass('hidden').removeClass('block');
-          }
-          function show(el) {
-            el.addClass('block').removeClass('hidden');
-          }
+    <footer class="bg-white">
+      <div
+        class="max-w-7xl mx-auto py-12 px-4 sm:px-6 md:flex md:items-center md:justify-between lg:px-8"
+      >
+        <div class="flex justify-center space-x-6 md:order-2">
+          <a
+            target="_blank"
+            href="https://github.com/vectos"
+            class="text-gray-400 hover:text-gray-500"
+          >
+            <span class="sr-only">GitHub</span>
+            <svg
+              class="h-6 w-6"
+              fill="currentColor"
+              viewBox="0 0 24 24"
+              aria-hidden="true"
+            >
+              <path
+                fill-rule="evenodd"
+                d="M12 2C6.477 2 2 6.484 2 12.017c0 4.425 2.865 8.18 6.839 9.504.5.092.682-.217.682-.483 0-.237-.008-.868-.013-1.703-2.782.605-3.369-1.343-3.369-1.343-.454-1.158-1.11-1.466-1.11-1.466-.908-.62.069-.608.069-.608 1.003.07 1.531 1.032 1.531 1.032.892 1.53 2.341 1.088 2.91.832.092-.647.35-1.088.636-1.338-2.22-.253-4.555-1.113-4.555-4.951 0-1.093.39-1.988 1.029-2.688-.103-.253-.446-1.272.098-2.65 0 0 .84-.27 2.75 1.026A9.564 9.564 0 0112 6.844c.85.004 1.705.115 2.504.337 1.909-1.296 2.747-1.027 2.747-1.027.546 1.379.202 2.398.1 2.651.64.7 1.028 1.595 1.028 2.688 0 3.848-2.339 4.695-4.566 4.943.359.309.678.92.678 1.855 0 1.338-.012 2.419-.012 2.747 0 .268.18.58.688.482A10.019 10.019 0 0022 12.017C22 6.484 17.522 2 12 2z"
+                clip-rule="evenodd"></path>
+            </svg>
+          </a>
 
-          $('#nav-button').click(function() {
-            shown = !shown;
-            if(shown) {
-              show(navBar);
-              hide(navIconClosed);
-              show(navIconOpen);
-            } else {
-              hide(navBar)
-              show(navIconClosed);
-              hide(navIconOpen);
-            }
-          });
+          <a
+            href="https://www.linkedin.com/in/mark-de-jong-a808b7167"
+            class="text-gray-400 hover:text-gray-500"
+          >
+            <span class="sr-only">LinkedIn</span>
+            <svg
+              class="h-6 w-6"
+              fill="currentColor"
+              viewBox="0 0 24 24"
+              aria-hidden="true"
+            >
+              <path
+                d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"
+              ></path>
+            </svg>
+          </a>
+        </div>
+        <div class="mt-8 md:mt-0 md:order-1">
+          <p class="text-center text-base text-gray-800">
+            &copy; 2023 Vectos - The vector in improving your websites & apps.
+            Registered under KvK: 71425993
+          </p>
+        </div>
+      </div>
+    </footer>
+  </body>
 
-        });
+  <script
+    src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
+    integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI="
+    crossorigin="anonymous"
+  ></script>
+  <script>
+    $(document).ready(function () {
+      var shown = false;
+      var navBar = $("#nav-bar");
+      var navIconClosed = $("#menu-icon-closed");
+      var navIconOpen = $("#menu-icon-open");
 
+      function hide(el) {
+        el.addClass("hidden").removeClass("block");
+      }
+      function show(el) {
+        el.addClass("block").removeClass("hidden");
+      }
 
-      </script>
-
+      $("#nav-button").click(function () {
+        shown = !shown;
+        if (shown) {
+          show(navBar);
+          hide(navIconClosed);
+          show(navIconOpen);
+        } else {
+          hide(navBar);
+          show(navIconClosed);
+          hide(navIconOpen);
+        }
+      });
+    });
+  </script>
 </html>
-
-
