--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -1,9 +1,9 @@
 ---
-import { CollectionEntry, getCollection } from 'astro:content';
-import BlogPost from '../../layouts/BlogPost.astro';
+import { CollectionEntry, getCollection } from "astro:content";
+import BlogPost from "../../layouts/BlogPost.astro";
 
-const posts = await getCollection('blog');
-type Props = CollectionEntry<'blog'>;
+const posts = await getCollection("blog");
+type Props = CollectionEntry<"blog">;
 
 const { slug } = Astro.params;
 const post = posts.find((page) => page.slug === slug);
@@ -12,5 +12,5 @@ const { Content } = await post.render();
 ---
 
 <BlogPost {...post.data}>
-	<Content />
+  <Content />
 </BlogPost>
