--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,41 +1,57 @@
 ---
-import BaseHead from '../../components/BaseHead.astro';
-import { SITE_TITLE, SITE_DESCRIPTION } from '../../consts';
-import { getCollection } from 'astro:content';
-import FormattedDate from '../../components/FormattedDate.astro';
-import Layout from '../../components/Layout.astro';
+import BaseHead from "../../components/BaseHead.astro";
+import { SITE_TITLE, SITE_DESCRIPTION } from "../../consts";
+import { getCollection } from "astro:content";
+import FormattedDate from "../../components/FormattedDate.astro";
+import Layout from "../../components/Layout.astro";
 
-const posts = (await getCollection('blog')).sort(
-	(a, b) => a.data.pubDate.valueOf() - b.data.pubDate.valueOf()
-).reverse();
+const posts = (await getCollection("blog"))
+  .sort((a, b) => a.data.pubDate.valueOf() - b.data.pubDate.valueOf())
+  .reverse();
 ---
+
 <Layout>
   <div class="bg-white py-12 sm:py-12">
     <div class="mx-auto max-w-7xl px-6 lg:px-8">
       <div class="mx-auto max-w-2xl text-center">
-        <h2 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">From the blog</h2>
+        <h2 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">
+          From the blog
+        </h2>
         <p class="mt-2 text-lg leading-8 text-gray-600">
           Latest rumblings around tech
         </p>
       </div>
-      <div class="mx-auto mt-10 grid max-w-2xl auto-rows-fr grid-cols-1 gap-8 sm:mt-14 lg:mx-0 lg:max-w-none lg:grid-cols-3">
-		{posts.map(post =>
-<article class="relative isolate flex flex-col justify-end overflow-hidden rounded-2xl bg-gray-900 px-8 pb-8 pt-80 sm:pt-48 lg:pt-80 ml-6 mb-10"
-            >
-              <img src={post.data.banner} alt="" class="absolute inset-0 -z-10 h-full w-full object-cover" />
+      <div
+        class="mx-auto mt-10 grid max-w-2xl auto-rows-fr grid-cols-1 gap-8 sm:mt-14 lg:mx-0 lg:max-w-none lg:grid-cols-3"
+      >
+        {
+          posts.map((post) => (
+            <article class="relative isolate flex flex-col justify-end overflow-hidden rounded-2xl bg-gray-900 px-8 pb-8 pt-80 sm:pt-48 lg:pt-80 ml-6 mb-10">
+              <img
+                src={post.data.banner}
+                alt=""
+                class="absolute inset-0 -z-10 h-full w-full object-cover"
+              />
               <div class="absolute inset-0 -z-10 bg-gradient-to-t from-gray-900 via-gray-900/40" />
               <div class="absolute inset-0 -z-10 rounded-2xl ring-1 ring-inset ring-gray-900/10" />
 
               <div class="flex flex-wrap items-center gap-y-1 overflow-hidden text-sm leading-6 text-gray-300">
                 <time class="mr-8">
-					<FormattedDate date={post.data.pubDate} />
+                  <FormattedDate date={post.data.pubDate} />
                 </time>
                 <div class="-ml-4 flex items-center gap-x-4">
-                  <svg viewBox="0 0 2 2" class="-ml-0.5 h-0.5 w-0.5 flex-none fill-white/50">
+                  <svg
+                    viewBox="0 0 2 2"
+                    class="-ml-0.5 h-0.5 w-0.5 flex-none fill-white/50"
+                  >
                     <circle cx={1} cy={1} r={1} />
                   </svg>
                   <div class="flex gap-x-2.5">
-                    <img src="/img/mark_avatar.jpg" alt="" class="h-6 w-6 flex-none rounded-full bg-white/10" />
+                    <img
+                      src="/img/mark_avatar.jpg"
+                      alt=""
+                      class="h-6 w-6 flex-none rounded-full bg-white/10"
+                    />
                     Mark
                   </div>
                 </div>
@@ -47,10 +63,9 @@ const posts = (await getCollection('blog')).sort(
                 </a>
               </h3>
             </article>
-
-
-		)}
-        </div>
+          ))
+        }
       </div>
     </div>
+  </div>
 </Layout>
