Remove hero buttons for now

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,4 @@
 ---
-import BaseHead from "../components/BaseHead.astro";
-import Header from "../components/Header.astro";
-import Footer from "../components/Footer.astro";
-import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
 import Layout from "../components/Layout.astro";
 ---
 
@@ -30,7 +26,7 @@ import Layout from "../components/Layout.astro";
             > and <span class="text-indigo-600">performant</span>. Vectos is
             located in Utrecht in the Netherlands.
           </p>
-          <div class="mt-10 sm:flex sm:justify-center lg:justify-start">
+          <!-- <div class="mt-10 sm:flex sm:justify-center lg:justify-start">
             <div class="rounded-md shadow">
               <a
                 href="/projects"
@@ -47,7 +43,7 @@ import Layout from "../components/Layout.astro";
                 About
               </a>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
       <div
