Add astro footer

--- a/src/components/Layout.astro
+++ b/src/components/Layout.astro
@@ -146,7 +146,7 @@ import BaseHead from "./BaseHead.astro";
         </div>
         <div class="mt-8 md:mt-0 md:order-1">
           <p class="text-center text-base text-gray-800">
-            &copy; 2023 Vectos - The vector in improving your websites & apps.
+            Made with Astro 🚀 - &copy; 2023 Vectos - The vector in improving your websites & apps.
             Registered under KvK: 71425993
           </p>
         </div>
