Add doctype to have OG work

--- a/src/components/Layout.astro
+++ b/src/components/Layout.astro
@@ -8,7 +8,8 @@ import BaseHead from "./BaseHead.astro";
     background: url(/img/bg.svg) no-repeat;
   }
 </style>
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <BaseHead
     description="Software development"
     title="Vectos"
