--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -9,8 +9,8 @@ type Props = CollectionEntry<"blog">["data"];
 
 const { title, description, pubDate, banner } = Astro.props;
 ---
-
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <BaseHead description={description} title={title} image={banner} />
   <Shell>
     <div class="relative bg-gray-50 overflow-hidden">
