--- a/src/components/Shell.astro
+++ b/src/components/Shell.astro
@@ -76,7 +76,7 @@ import HeaderLink from "../components/HeaderLink.astro";
             </div>
             <div class="hidden sm:ml-6 sm:flex sm:space-x-8">
               <HeaderLink href="/">Home</HeaderLink>
-              <!-- <HeaderLink href="/blog">Projects</HeaderLink> -->
+              <HeaderLink href="/project">Projects</HeaderLink>
               <HeaderLink href="/about">About</HeaderLink>
               <HeaderLink href="/blog">Blog</HeaderLink>
             </div>
@@ -88,7 +88,7 @@ import HeaderLink from "../components/HeaderLink.astro";
       <div id="nav-bar" class="hidden">
         <div class="pt-2 pb-3 space-y-1">
           <HeaderLink href="/">Home</HeaderLink>
-          <!-- <HeaderLink href="/blog">Projects</HeaderLink> -->
+          <HeaderLink href="/project">Projects</HeaderLink>
           <HeaderLink href="/about">About</HeaderLink>
           <HeaderLink href="/blog">Blog</HeaderLink>
         </div>
