--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,10 +26,10 @@ import Layout from "../components/Layout.astro";
             > and <span class="text-indigo-600">performant</span>. Vectos is
             located in Utrecht in the Netherlands.
           </p>
-          <!-- <div class="mt-10 sm:flex sm:justify-center lg:justify-start">
+          <div class="mt-10 sm:flex sm:justify-center lg:justify-start">
             <div class="rounded-md shadow">
               <a
-                href="/projects"
+                href="/project"
                 class="w-full flex items-center justify-center px-8 py-3 border border-transparent text-base font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 md:py-4 md:text-lg md:px-10"
               >
                 Projects
@@ -43,7 +43,7 @@ import Layout from "../components/Layout.astro";
                 About
               </a>
             </div>
-          </div> -->
+          </div>
         </div>
       </div>
       <div
