--- a/src/pages/project/index.astro
+++ b/src/pages/project/index.astro
@@ -20,47 +20,33 @@ const posts = (await getCollection("project"))
         </p>
       </div>
       <div
-        class="mx-auto mt-10 grid max-w-2xl auto-rows-fr grid-cols-1 gap-8 sm:mt-14 lg:mx-0 lg:max-w-none lg:grid-cols-3"
+        class="mt-12 max-w-lg mx-auto grid gap-5 lg:grid-cols-3 lg:max-w-none"
       >
         {
           posts.map((post) => (
-            <article class="relative isolate flex flex-col justify-end overflow-hidden rounded-2xl bg-gray-900 px-8 pb-8 pt-80 sm:pt-48 lg:pt-80 ml-6 mb-10">
-              <img
-                src={post.data.banner}
-                alt=""
-                class="absolute inset-0 -z-10 h-full w-full object-none"
-              />
-              <div class="absolute inset-0 -z-10 bg-gradient-to-t from-gray-900 via-gray-900/40" />
-              <div class="absolute inset-0 -z-10 rounded-2xl ring-1 ring-inset ring-gray-900/10" />
-
-              <div class="flex flex-wrap items-center gap-y-1 overflow-hidden text-sm leading-6 text-gray-300">
-                <time class="mr-8">
-                  <FormattedDate date={post.data.pubDate} />
-                </time>
-                <div class="-ml-4 flex items-center gap-x-4">
-                  <svg
-                    viewBox="0 0 2 2"
-                    class="-ml-0.5 h-0.5 w-0.5 flex-none fill-white/50"
-                  >
-                    <circle cx={1} cy={1} r={1} />
-                  </svg>
-                  <div class="flex gap-x-2.5">
-                    <img
-                      src="/img/mark_avatar.jpg"
-                      alt=""
-                      class="h-6 w-6 flex-none rounded-full bg-white/10"
-                    />
-                    Mark
-                  </div>
+            <div class="flex flex-col rounded-lg shadow-md overflow-hidden">
+              <div class="flex-shrink-0">
+                <a href={`/project/${post.slug}`}>
+                  <img
+                    class="h-24 w-full object-cover"
+                    src={post.data.banner}
+                    alt=""
+                  />
+                </a>
+              </div>
+              <div class="flex-1 bg-white p-6 flex flex-col justify-between">
+                <div class="flex-1">
+                  <a href={`/project/${post.slug}`} class="block mt-2">
+                    <p class="text-xl font-semibold text-gray-900">
+                      {post.data.title}
+                    </p>
+                    <p class="mt-3 text-base text-gray-500">
+                      {post.data.description}
+                    </p>
+                  </a>
                 </div>
               </div>
-              <h3 class="mt-3 text-lg font-semibold leading-6 text-white">
-                <a href={`/project/${post.slug}`}>
-                  <span class="absolute inset-0" />
-                  {post.data.title}
-                </a>
-              </h3>
-            </article>
+            </div>
           ))
         }
       </div>
