--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import Layout from "../components/Layout.astro";
+import TextGenerating from "../components/react/TextGenerating";
 ---
 <style>
 .gradient-text {
@@ -24,9 +25,7 @@ import Layout from "../components/Layout.astro";
             class="text-4xl tracking-tight font-extrabold text-gray-900 sm:text-5xl md:text-6xl lg:text-5xl xl:text-6xl"
           >
             <span class="block gradient-text xl:inline">Vectos</span>
-            <span class="block xl:inline"
-              >the vector in improving your websites & apps</span
-            >
+            <TextGenerating client:load className="block xl:inline" words="the vector in improving your websites & apps" />
           </h1>
           <p
             class="mt-3 max-w-md mx-auto text-lg text-gray-500 sm:text-xl md:mt-5 md:max-w-3xl"
@@ -440,3 +439,4 @@ import Layout from "../components/Layout.astro";
     </div>
   </div>
 </Layout>
+../components/TextGenerating.tsx
