--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,12 +25,12 @@ import TextGenerating from "../components/react/TextGenerating";
             class="text-4xl tracking-tight font-extrabold text-gray-900 sm:text-5xl md:text-6xl lg:text-5xl xl:text-6xl"
           >
             <span class="block gradient-text xl:inline">Vectos</span>
-            <TextGenerating client:load className="block xl:inline" words="the vector in improving your websites & apps" />
+            <TextGenerating client:load className="block xl:inline" words="the vector in improving your AI, cloud infrastruture, backends, websites & apps" />
           </h1>
           <p
             class="mt-3 max-w-md mx-auto text-lg text-gray-500 sm:text-xl md:mt-5 md:max-w-3xl"
           >
-            Trust Vectos, led by <span class="text-indigo-600 font-extrabold">Mark de Jong</span>, for outstanding websites and apps.
+            Trust Vectos, led by <span class="text-indigo-600 font-extrabold">Mark de Jong</span>, for outstanding AI, cloud infrastruture, backends websites and apps.
             With a focus on <span class="text-indigo-600">user-friendly design</span>, <span class="text-indigo-600">robust functionality</span>, and <span class="text-indigo-600">top-notch performance</span>.
           </p>
           <div class="mt-10 sm:flex sm:justify-center lg:justify-start">
@@ -99,12 +99,11 @@ import TextGenerating from "../components/react/TextGenerating";
                   stroke="currentColor"
                   aria-hidden="true"
                 >
-                  <path
-                    stroke-linecap="round"
+                  
+                    <path stroke-linecap="round"
                     stroke-linejoin="round"
-                    stroke-width="2"
-                    d="M9 3v2m6-2v2M9 19v2m6-2v2M5 9H3m2 6H3m18-6h-2m2 6h-2M7 19h10a2 2 0 002-2V7a2 2 0 00-2-2H7a2 2 0 00-2 2v10a2 2 0 002 2zM9 9h6v6H9V9z"
-                  ></path>
+                    stroke-width="2" d="M14.25 9.75 16.5 12l-2.25 2.25m-4.5 0L7.5 12l2.25-2.25M6 20.25h12A2.25 2.25 0 0 0 20.25 18V6A2.25 2.25 0 0 0 18 3.75H6A2.25 2.25 0 0 0 3.75 6v12A2.25 2.25 0 0 0 6 20.25Z" />
+
                 </svg>
               </div>
             </div>
@@ -113,8 +112,76 @@ import TextGenerating from "../components/react/TextGenerating";
                 Software development
               </dt>
               <dd class="mt-2 text-base text-gray-500">
-                Web apps, Desktop apps, Mobile apps, etc. Software development
-                is the process going from a idea to an app.
+                Software development is the process of designing, writing, testing, and maintaining code to create programs or applications that run on computers, phones, or other devices. It involves solving problems using programming languages and tools to build anything from websites and mobile apps to operating systems and enterprise software.
+              </dd>
+            </div>
+          </div>
+
+          <div class="flex">
+            <div class="flex-shrink-0">
+              <div
+                class="flex items-center justify-center h-12 w-12 rounded-md bg-indigo-500 text-white"
+              >
+                <!-- Heroicon name: outline/scale -->
+                <svg
+                  class="h-6 w-6"
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke="currentColor"
+                  aria-hidden="true"
+                >
+                  
+
+
+                    <path stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2" d="M8.25 3v1.5M4.5 8.25H3m18 0h-1.5M4.5 12H3m18 0h-1.5m-15 3.75H3m18 0h-1.5M8.25 19.5V21M12 3v1.5m0 15V21m3.75-18v1.5m0 15V21m-9-1.5h10.5a2.25 2.25 0 0 0 2.25-2.25V6.75a2.25 2.25 0 0 0-2.25-2.25H6.75A2.25 2.25 0 0 0 4.5 6.75v10.5a2.25 2.25 0 0 0 2.25 2.25Zm.75-12h9v9h-9v-9Z" />
+
+                </svg>
+              </div>
+            </div>
+            <div class="ml-4">
+              <dt class="text-lg leading-6 font-medium text-gray-900">
+                Embedded firmware development
+              </dt>
+              <dd class="mt-2 text-base text-gray-500">
+                Embedded firmware development is the process of writing low-level software that runs directly on hardware devices—like microcontrollers or chips—to control their functions. It's used in products like smartwatches, IoT devices, automotive systems, and industrial machines. I do this in Rust for safety reasons :)
+              </dd>
+            </div>
+          </div>
+
+
+          <div class="flex">
+            <div class="flex-shrink-0">
+              <div
+                class="flex items-center justify-center h-12 w-12 rounded-md bg-indigo-500 text-white"
+              >
+                <!-- Heroicon name: outline/scale -->
+                <svg
+                  class="h-6 w-6"
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke="currentColor"
+                  aria-hidden="true"
+                >
+                  
+
+
+                    <path stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2" d="M5.25 14.25h13.5m-13.5 0a3 3 0 0 1-3-3m3 3a3 3 0 1 0 0 6h13.5a3 3 0 1 0 0-6m-16.5-3a3 3 0 0 1 3-3h13.5a3 3 0 0 1 3 3m-19.5 0a4.5 4.5 0 0 1 .9-2.7L5.737 5.1a3.375 3.375 0 0 1 2.7-1.35h7.126c1.062 0 2.062.5 2.7 1.35l2.587 3.45a4.5 4.5 0 0 1 .9 2.7m0 0a3 3 0 0 1-3 3m0 3h.008v.008h-.008v-.008Zm0-6h.008v.008h-.008v-.008Zm-3 6h.008v.008h-.008v-.008Zm0-6h.008v.008h-.008v-.008Z" />
+
+                </svg>
+              </div>
+            </div>
+            <div class="ml-4">
+              <dt class="text-lg leading-6 font-medium text-gray-900">
+                Cloud infra-stucture (DevOps)
+              </dt>
+              <dd class="mt-2 text-base text-gray-500">
+                DevOps or cloud infrastructure engineers build and maintain the systems that keep software running reliably and at scale. They automate deployments, manage cloud resources (like servers, storage, and networks), ensure security, monitor performance, and support continuous integration and delivery (CI/CD). Their goal is to make development faster and operations more efficient using tools like AWS, Azure, Terraform, Docker, and Kubernetes.
               </dd>
             </div>
           </div>
@@ -147,8 +214,7 @@ import TextGenerating from "../components/react/TextGenerating";
                 Web development
               </dt>
               <dd class="mt-2 text-base text-gray-500">
-                Web development is the process of going from an idea to a shiny
-                site!
+                Web development is the process of creating websites and web applications. It involves both front-end development, which focuses on the user interface and experience using technologies like HTML, CSS, and JavaScript
               </dd>
             </div>
           </div>
@@ -181,9 +247,7 @@ import TextGenerating from "../components/react/TextGenerating";
                 UX / UI
               </dt>
               <dd class="mt-2 text-base text-gray-500">
-                User interface (UI) design is the design of user interfaces
-                software, with the focus on maximizing usability also known as
-                User experience (UX).
+                UX/UI or interaction design is about creating digital products that are easy, enjoyable, and intuitive to use. UX (user experience) focuses on the overall journey and how smoothly a user can achieve their goals, while UI (user interface) design deals with the visual layout and interactive elements like buttons, menus, and forms. Interaction design ties these together by shaping how users interact with a product in real time—ensuring it's both functional and engaging.
               </dd>
             </div>
           </div>
@@ -241,6 +305,22 @@ import TextGenerating from "../components/react/TextGenerating";
         <dl
           class="space-y-10 md:space-y-0 md:grid md:grid-cols-2 md:gap-x-8 md:gap-y-10"
         >
+          <div class="flex">
+            <div class="flex-shrink-0">
+              <div
+                class="flex items-center justify-center h-24 w-24 rounded-md bg-gray-100 text-white"
+              >
+                <img src="/img/companies/vandebron.png" />
+              </div>
+            </div>
+            <div class="ml-4">
+              <dt class="text-lg leading-6 font-medium text-gray-900">DHL</dt>
+              <dd class="mt-2 text-base text-gray-500">
+                Vandebron is a Dutch green energy marketplace that connects households and businesses directly with local renewable producers—like farmers with wind turbines, solar panels, or biogas—without owning any generation assets.
+              </dd>
+            </div>
+          </div>
+
           <div class="flex">
             <div class="flex-shrink-0">
               <div
