Update text in index page for improved clarity and conciseness

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,7 +25,7 @@ import TextGenerating from "../components/react/TextGenerating";
             class="text-4xl tracking-tight font-extrabold text-gray-900 sm:text-5xl md:text-6xl lg:text-5xl xl:text-6xl"
           >
             <span class="block gradient-text xl:inline">Vectos</span>
-            <TextGenerating client:load className="block xl:inline" words="the vector in improving your AI, cloud infrastruture, backends, websites & apps" />
+            <TextGenerating client:load className="block xl:inline" words="the vector in improving your AI, cloud infra, backends, websites & apps" />
           </h1>
           <p
             class="mt-3 max-w-md mx-auto text-lg text-gray-500 sm:text-xl md:mt-5 md:max-w-3xl"
