--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,7 @@
 ---
+import Client from "../components/Client.astro";
 import Layout from "../components/Layout.astro";
+import Mark from "../components/Mark.astro";
 import TextGenerating from "../components/react/TextGenerating";
 ---
 <style>
@@ -305,95 +307,31 @@ import TextGenerating from "../components/react/TextGenerating";
         <dl
           class="space-y-10 md:space-y-0 md:grid md:grid-cols-2 md:gap-x-8 md:gap-y-10"
         >
-          <div class="flex">
-            <div class="flex-shrink-0">
-              <div
-                class="flex items-center justify-center h-24 w-24 rounded-md bg-gray-100 text-white"
-              >
-                <img src="/img/companies/vandebron.png" />
-              </div>
-            </div>
-            <div class="ml-4">
-              <dt class="text-lg leading-6 font-medium text-gray-900">DHL</dt>
-              <dd class="mt-2 text-base text-gray-500">
-                Vandebron is a Dutch green energy marketplace that connects households and businesses directly with local renewable producers—like farmers with wind turbines, solar panels, or biogas—without owning any generation assets.
-              </dd>
-            </div>
-          </div>
-
-          <div class="flex">
-            <div class="flex-shrink-0">
-              <div
-                class="flex items-center justify-center h-24 w-24 rounded-md bg-gray-100 text-white"
-              >
-                <img src="/img/companies/dhl.png" />
-              </div>
-            </div>
-            <div class="ml-4">
-              <dt class="text-lg leading-6 font-medium text-gray-900">DHL</dt>
-              <dd class="mt-2 text-base text-gray-500">
-                DHL German international courier, package delivery and express
-                mail service. I've worked at DHL on several high-end web
-                applications.
-              </dd>
-            </div>
-          </div>
-
-          <div class="flex">
-            <div class="flex-shrink-0">
-              <div
-                class="flex items-center justify-center h-24 w-24 rounded-md bg-gray-100 text-white"
-              >
-                <img src="/img/companies/ing.png" />
-              </div>
-            </div>
-            <div class="ml-4">
-              <dt class="text-lg leading-6 font-medium text-gray-900">ING</dt>
-              <dd class="mt-2 text-base text-gray-500">
-                The ING Group is a Dutch multinational banking and financial
-                services corporation. I've worked at ING on approval software.
-              </dd>
-            </div>
-          </div>
-
-          <div class="flex">
-            <div class="flex-shrink-0">
-              <div
-                class="flex items-center justify-center h-24 w-24 rounded-md bg-gray-100 text-white"
-              >
-                <img src="/img/companies/veon.png" />
-              </div>
-            </div>
-            <div class="ml-4">
-              <dt class="text-lg leading-6 font-medium text-gray-900">Veon</dt>
-              <dd class="mt-2 text-base text-gray-500">
-                VEON is a Dutch-domiciled multinational telecommunication
-                services. It predominantly operates services in the regions of
-                Asia, Africa and Europe. I've worked at VEON on the top up
-                transactional systems.
-              </dd>
-            </div>
-          </div>
-
-          <div class="flex">
-            <div class="flex-shrink-0">
-              <div
-                class="flex items-center justify-center h-24 w-24 rounded-md bg-gray-100 text-white"
-              >
-                <img src="/img/companies/malmberg.svg" />
-              </div>
-            </div>
-            <div class="ml-4">
-              <dt class="text-lg leading-6 font-medium text-gray-900">
-                Malmberg
-              </dt>
-              <dd class="mt-2 text-base text-gray-500">
-                Malmberg is a Dutch company which creates educational software
-                and books for schools. I've worked on Malmberg on a content
-                management system (CMS) for eductional software.
-              </dd>
-            </div>
-          </div>
+          <Client
+            image="/img/companies/vandebron.png"
+            name="Vandebron"
+            description="Vandebron is a Dutch green energy marketplace that connects households and businesses directly with local renewable producers—like farmers with wind turbines, solar panels, or biogas—without owning any generation assets."
+          />
+          <Client
+            image="/img/companies/dhl.png"
+            name="DHL"
+            description="DHL German international courier, package delivery and express mail service. I've worked at DHL on several high-end web applications."
+          />
+          <Client
+            image="/img/companies/ing.png"
+            name="ING"
+            description="The ING Group is a Dutch multinational banking and financial services corporation. I've worked at ING on approval software."
+          />
+          <Client
+            image="/img/companies/veon.png"
+            name="Veon"
+            description="VEON is a Dutch-domiciled multinational telecommunication services. It predominantly operates services in the regions of Asia, Africa and Europe. I've worked at VEON on the top up transactional systems."
+          />
+          <Client
+            image="/img/companies/malmberg.svg"
+            name="Malmberg"
+            description="Malmberg is a Dutch company which creates educational software and books for schools. I've worked on Malmberg on a content management system (CMS) for eductional software."
+          />
         </dl>
       </div>
     </div>
@@ -478,45 +416,6 @@ import TextGenerating from "../components/react/TextGenerating";
       </div>
     </div>
 
-    <div class="mt-8 bg-white">
-      <div class="max-w-7xl mx-auto py-16 px-4 sm:px-6 lg:px-8">
-        <div
-          class="bg-indigo-700 rounded-lg shadow-xl overflow-hidden lg:grid lg:grid-cols-2 lg:gap-4"
-        >
-          <div
-            class="pt-10 pb-12 px-6 sm:pt-16 sm:px-16 lg:py-16 lg:pr-0 xl:py-20 xl:px-20"
-          >
-            <div class="lg:self-center">
-              <h2 class="text-3xl font-extrabold text-white sm:text-4xl">
-                <span class="block">Kopje koffie?</span>
-              </h2>
-              <p class="mt-4 text-lg leading-6 text-indigo-200">
-                How could I help with your business? Let's have a coffee in real
-                life or online!
-              </p>
-
-              <a
-                href="mailto:mark@vectos.net"
-                class="mt-8 bg-white border border-transparent rounded-md shadow px-5 py-3 inline-flex items-center text-base font-medium text-indigo-600 hover:bg-indigo-50"
-                >Contact Mark</a
-              >
-              <a
-                href="/about"
-                class="mt-8 border border-transparent underline px-5 py-3 inline-flex items-center text-base font-medium text-gray-200 hover:bg-white-50"
-                >About Mark</a
-              >
-            </div>
-          </div>
-          <div class="mt-6 mb-6 mr-6">
-            <img
-              class="h-128 w-128 rounded-lg"
-              src="/img/mark.jpg"
-              alt="Mark"
-            />
-          </div>
-        </div>
-      </div>
-    </div>
+    <Mark />
   </div>
 </Layout>
-../components/TextGenerating.tsx
