--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,49 @@ import Client from "../components/Client.astro";
 import Layout from "../components/Layout.astro";
 import Mark from "../components/Mark.astro";
 import TextGenerating from "../components/react/TextGenerating";
+import Tech from "../components/Tech.astro";
+const tech = [
+  "rust",
+  "typescript",
+  "js",
+  "scala",
+  "zio",
+  "akka",
+  "typelevel",
+  "kafka",
+  "keycloak",
+  "kotlin",
+  "java",
+  "postgresql",
+  "postman",
+  "azure",
+  "cloudflare",
+  "elastic",
+  "github",
+  "grafana",
+  "jira",
+  "kibana",
+  "markdown",
+  "mongodb",
+  "mysql",
+  "netlify",
+  "deno",
+  "nodejs",
+  "notion",
+  "astro",
+  "playwright",
+  "storybook",
+  "cypress",
+  "tailwindcss",
+  "webassembly",
+  "zod",
+  "react",
+  "docker",
+  "kubernetes",
+  "gitlab",
+  "jira",
+  "slack",
+];
 ---
 <style>
 .gradient-text {
@@ -335,6 +378,8 @@ import TextGenerating from "../components/react/TextGenerating";
         </dl>
       </div>
     </div>
+
+    <Tech tech={tech} />
 
     <div class="mt-16 max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
       <div class="lg:text-center">
